# MeridianOps-Retail-Performance-Platform

./: .gitignore  README.md  metadata.json  prmpt.codex.md  prompt.md  trajectory.json
docs/: api-spec.md  design.md  (+1 more)
repo/backend/: .dockerignore  alembic.ini  pyproject.toml
repo/backend/alembic/versions/: 20260326_0001_initial_baseline.py  20260326_0002_auth_baseline.py  20260326_0005_dashboard_builder.py  20260327_0007_attendance_workforce.py  20260403_0011_kpi_refund_cost_columns.py  20260403_0012_orders_lifecycle.py
repo/backend/app/: main.py
repo/backend/app/api/v1/: router.py
repo/backend/app/api/v1/endpoints/: attendance.py  audit.py  health.py  inventory.py  orders.py  secure.py
repo/backend/app/cli/: backfill_kpi.py
repo/backend/app/core/: config.py  errors.py  masking.py  security.py
repo/backend/app/db/: session.py
repo/backend/app/db/models/: __init__.py  analytics.py  attendance.py  kpi.py  orders.py  system.py
repo/backend/app/schemas/: attendance.py  common.py  inventory.py  kpi.py  orders.py  training.py
repo/backend/app/services/: analytics_service.py  audit_service.py  campaign_service.py  inventory_service.py  kpi_service.py  loyalty_service.py  member_view_service.py  order_service.py  scheduler_service.py  seed_service.py  training_service.py
repo/backend/app/types/: business.py  roles.py
repo/backend/tests/: conftest.py  test_auth_security.py  test_error_handling.py  test_health.py  test_inventory_workflow.py  test_ops_kpi.py  test_order_lifecycle.py  test_postgres_locking.py  test_security_hardening.py  test_training_flow.py
(+157 files in other folders)
