[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meridianops-backend"
version = "0.1.0"
description = "MeridianOps Retail Performance backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "bcrypt>=4.1.2",
  "cryptography>=45.0.0",
  "fastapi>=0.115.0",
  "Pillow>=11.0.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.1",
  "reportlab>=4.2.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "httpx>=0.27.2",
  "pypdf>=5.4.0",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
